my first project

--- a/Abdul.html
+++ b/Abdul.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <div>
-        This is my first div
-    </div>
+<body bgcolor="white" text="red">
+   <h1>HELLO SWEETHEART </h1>
+   <h2>Aaj takleef me hu,,,kal sukoon bhi milega....<br>Khuda mera bhi tho hai,,,akir kab tak rulayega.....</h2>
+   <img src="bobby.jpg" width="300" height="500"
+   b
 </body>
 </html>
